# Advanced_RAGS

RAG_01/: README.md  main.py  pyproject.toml
RAG_01/notebook/: document.ipynb
