[project]
name = "rag-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.34",
    "langchain-pinecone>=0.2.12",
    "pinecone>=7.3.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
]
